--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,5 @@
 FROM golang:1.25.6-bookworm AS build
 
-ARG APP_NAME
 WORKDIR /src
 
 COPY go.mod go.sum ./
@@ -8,9 +7,14 @@ RUN go mod download
 
 COPY . .
 
+RUN go install github.com/swaggo/swag/cmd/swag@v1.16.6 && \
+    swag init -g ./cmd/api/swagger.go -o ./docs
+
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
-    go build -trimpath -ldflags="-s -w" -o /out/api ./cmd/${APP_NAME}
+    go build -tags=swagger -trimpath -ldflags="-s -w" -o /out/api ./cmd/api
 
 FROM gcr.io/distroless/static-debian13:nonroot
+
 COPY --from=build /out/api /api
+
 ENTRYPOINT ["/api"]
