--- a/backend/Makefile
+++ b/backend/Makefile
@@ -10,21 +10,9 @@ ifneq (,$(wildcard ./.env))
 endif
 
 install:
-	go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate@v4.19.1
+	go mod download
 	go install github.com/swaggo/swag/cmd/swag@v1.16.6
 	$(COPYCMD) ../.env.example .env
-
-migrate-up:
-	migrate -path ./migrations -database "$(DB_URL)" up
-
-migrate-down:
-	migrate -path ./migrations -database "$(DB_URL)" down 1
-
-migrate-version:
-	migrate -path ./migrations -database "$(DB_URL)" version
-
-migrate-create:
-	migrate create -ext sql -dir migrations -seq $(name)
 
 run:
 	swag init -g .\cmd\api\swagger.go -o .\docs
