--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+    defaults:
+      run:
+        working-directory: ./backend
 
     steps:
     - uses: actions/checkout@v6
@@ -25,21 +28,21 @@ jobs:
         go-version: '1.25.6'
 
     - name: Install the project
-      run: make install
+      run: go mod download
 
-    - name: Run Linters (build)
-      run: go build ./cmd/api
-
-    - name: Run Linters (vet)
-      run: go vet ./cmd/api
-
-    - name: Run Linters (fmt)
-      run: go fmt ./cmd/api
+    - name: Run Linters (golangci-lint)
+      uses: golangci/golangci-lint-action@v9
+      with:
+        version: v2.8.0
+        args: --timeout=5m
 
   migrations:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+    defaults:
+      run:
+        working-directory: ./migrations
     
     services:
       postgres:
