ci: Working dir

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,7 @@ jobs:
       with:
         version: v2.8.0
         args: --timeout=5m
+        working-directory: backend
 
   migrations:
     runs-on: ubuntu-latest
