--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,6 +14,8 @@ jobs:
     defaults:
       run:
         working-directory: ./migrations
+    strategy:
+      fail-fast: false
 
     steps:
       - uses: actions/checkout@v6
@@ -34,6 +36,10 @@ jobs:
     defaults:
       run:
         working-directory: ./backend
+    strategy:
+      fail-fast: false
+
+    needs: migrations
 
     steps:
       - uses: actions/checkout@v6
@@ -44,4 +50,4 @@ jobs:
         run: flyctl deploy --remote-only -e VERSION=$VERSION
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-          VERSION: ${{ github.event.release.name }}
+          VERSION: ${{ github.event.release.tag_name }}
