--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -16,6 +16,15 @@ primary_region = 'lhr'
   min_machines_running = 0
   processes = ['app']
 
+[[http_service.checks]]
+  interval = '10s'
+  timeout = '2s'
+  grace_period = '5s'
+  path = '/health'
+  protocol = "http"
+  method = "get"
+  tls_skip_verify = false
+
 [[vm]]
   memory = '256mb'
   cpus = 1
