docs: Getting started

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DB_URL=postgresql://postgres:pu55y@localhost:5432/gol
+DB_URL=postgresql://postgres:pu55y@localhost:5432/gol?sslmode=disable
 ENVIRONMENT=local
 ALLOWED_ORIGINS=["*"]
 POSTGRES_USER=postgres
