--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -20,7 +20,7 @@ primary_region = 'lhr'
   interval = '10s'
   timeout = '2s'
   grace_period = '10s'
-  path = '/health'
+  path = '/api/health'
   protocol = "http"
   method = "get"
   tls_skip_verify = false
