--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -47,7 +47,7 @@ jobs:
       - uses: superfly/flyctl-actions/setup-flyctl@v1
 
       - name: Deploy to Fly
-        run: flyctl deploy --remote-only -e VERSION=$VERSION
+        run: flyctl deploy --remote-only -e VERSION=$VERSION -e DEBUG=false
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
           VERSION: ${{ github.event.release.tag_name }}
