--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,6 +7,10 @@ on:
 permissions:
   contents: read
 
+concurrency:
+  group: cd
+  cancel-in-progress: false
+
 jobs:
   migrations:
     runs-on: ubuntu-latest
